Compatible with Turbo Delphi again.
git-svn-id: https://svn.viathinksoft.com/svn/spacemission@6 2cb2a291-5fe7-405d-a812-557228769704

--- a/_Private/ToDo.txt
+++ b/_Private/ToDo.txt
@@ -1,15 +1,16 @@
 
 2015 TODO
 
+- weniger startmenüeinträge wegen windows 10
+- versioninfo
 - Bug: 2 Taskleisteneinträge
 - Multilingual
-- Delphi XE4 Kompatibel machen, Abwärtskompatibel bis Turbo Delphi oder ggf Delphi 6
 - SplashScreens: als BMP
 - ESC : Pause
 - Intro : Enter anstelle Leertaste
 - Pause : Bildschirm soll grau werden
 - Hintergrund besser und Abwechslungsreicher
-- Neues DX: FPS-Limiter für Sprite-Animationen
+- Neues DX: FPS-Limiter für Sprite-Animationen -- not a bug: liegt an spielgeschwindigkeit
 - Verschiedene Schwierigkeitsstufen (Geschwindigkeiten)
 - Boss schwieriger machen
 - Neues UFO das im Kreis fliegt
