git-svn-id: https://svn.viathinksoft.com/svn/spacemission@7 2cb2a291-5fe7-405d-a812-557228769704

--- a/_Private/ToDo.txt
+++ b/_Private/ToDo.txt
@@ -1,6 +1,10 @@
 
 2015 TODO
 
+- (siehe NOT): MCI hat Längenbegrenzung
+- (siehe NOT): weitere Änderungen?
+- bewegungsunschärfe wegen TFT
+- "Throwback" nach einem hit
 - weniger startmenüeinträge wegen windows 10
 - versioninfo
 - Bug: 2 Taskleisteneinträge
