git-svn-id: https://svn.viathinksoft.com/svn/spacemission@8 2cb2a291-5fe7-405d-a812-557228769704

--- a/_Private/ToDo.txt
+++ b/_Private/ToDo.txt
@@ -44,3 +44,6 @@ SPIEL
 LEVELEDITOR
 - Kartengröße bleibt bei "Neu"
 - "Beenden ohne Speichern?" bei leerem Level
+- Langsam, manchmal sogar Deadlock
+- ggf. auch Autor in LVL Datei packen und Kommentare in Datei erlauben
+- Delphi IDE: Form Height ändern sich automatisch, es wird immer größer.
